<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="dashboard_fragment">List of Books</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="cost">Cost</string>
    <string name="rating">Rating</string>
    <string name="about_the_book">About the book :</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="sort_a_z">Sort A-Z</string>
</resources>