<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imgBookLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_book_app"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:layout_below="@+id/imgBookLogo"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txtAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:padding="5dp"
            android:layout_below="@+id/txtBookName"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txtCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:padding="5dp"
            android:layout_below="@+id/txtAuthorName"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_below="@+id/txtCost"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            app:drawableLeftCompat="@drawable/ic_baseline_star_24" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>