<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="@color/off_white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/btnAddToFavourites">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imgBookLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_book_app"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/txtBookName"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/imgBookLogo" />

                <TextView
                    android:id="@+id/txtAuthorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:layout_marginEnd="100dp"
                    android:layout_toEndOf="@+id/imgBookLogo"
                    android:layout_below="@+id/txtBookName"/>

                <TextView
                    android:id="@+id/txtCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:textSize="12sp"
                    android:textColor="@color/purple_500"
                    android:padding="5dp"
                    android:layout_marginEnd="100dp"
                    android:layout_toEndOf="@+id/imgBookLogo"
                    android:layout_below="@+id/txtAuthorName"/>

                <ImageView
                    android:id="@+id/imgRatingStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtBookName"
                    android:src="@drawable/ic_baseline_star_24"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgRatingStar"
                    android:layout_marginTop="18dp"
                    android:text="@string/rating"
                    android:textSize="12sp"
                    android:layout_marginStart="3dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/txtAboutBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_the_book"
                    android:textStyle="bold"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:id="@+id/txtBookDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutBook"
                    android:layout_marginTop="15dp"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_to_favourites"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="19sp"
        tools:ignore="VisualLintButtonSize,VisualLintOverlap" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>